# chatgpt-solana-plugin

./: .env  .gitignore  README.md  langchain_run.py  pyproject.toml  req.py
.well-known/: ai-plugin.json  openapi.yaml
local-server/: __init__.py  main.py
local_server/: .env  __init__.py  ai-plugin.json  config.py  dependencies.py  main.py
local_server/routers/: echo.py  solana.py
local_server/services/: solana_connection.py
